# MBS_SEARCH

./: .coverage  .gitignore  DEPLOYMENT.md  Makefile  README.md  RENDER_ENV_VARS.txt  ResearchDoc.md  config.py  instructions.md  mbs.db.backup  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run-validation.sh  simple_start.py  start.py  startup_debug.py  test_ui.html
api/: enhanced_ui.py  main.py
backups/: production_latest.db
chroma_db/50c06b0a-a742-43f8-988d-7e6412cd8fd2/: index_metadata.pickle
chroma_db/6289bf87-de29-4090-998b-f95dffe8d98c/: index_metadata.pickle
data/: mbs.csv  sample.csv
models/: __init__.py
scripts/: debug_nlp_pipeline.py  debug_search_structure.py  debug_vector_search.py  enable_local_embeddings.py  populate_mbs_data.py  reset_vector_db.py
services/: gemini_service.py  nlp_service.py  vector_service.py
src/: db.py  mbs_models.py  mbs_parser.py  relationship_extraction.py
src/mbs_clarity/: _loader.py  ai_models.py  ai_service.py  cli.py  contextual_chatbot.py  db.py  mbs_models.py  mbs_parser.py  natural_language_search.py  openai_service.py  relationship_extraction.py  vector_db.py
templates/: dual_panel_ui.py  enhanced_chat_ui.py
tests/: README.md  test_db_api.py  test_extraction.py  test_parser.py  test_realdata_e2e.py
ui/: index.html
validation/: 00-production-state.sh  01-environment-setup.sh  02-code-quality.sh  03-data-loading.sh  04-api-server.sh  05-web-interface.sh  06-database.sh  07-extraction-patterns.sh  08-performance.sh  09-end-to-end.sh  10-real-data.sh  11-error-handling.sh  12-cli-tools.sh  13-security.sh  14-final-validation.sh  README.md
vector_db/c1f60442-2fa4-47e5-bd02-f8b9a3f0d687/: index_metadata.pickle
