[tool.poetry]
name = "mbs-clarity"
version = "0.1.0"
description = "MBS Clarity MVP: parse MBS data, extract relationships, and serve a simple lookup UI"
authors = ["Thomas Shields <you@example.com>"]
readme = "README.md"
packages = [
  { include = "mbs_clarity", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# AI/ML dependencies - Gemini implementation
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.36.0"}
gunicorn = "^23.0.0"
lxml = "^6.0.1"
pydantic-settings = "^2.10.1"
python-multipart = "^0.0.20"
pandas = "^2.3.2"
google-generativeai = "^0.8.5"
chromadb = "^1.1.0"
sentence-transformers = "^5.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
black = "^24.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
httpx = "0.27.2"

[tool.poetry.scripts]
mbs = "mbs_clarity.cli:main"
mbs-load = "mbs_clarity._loader:main"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"